Fix issues with graphs upon scrolling on mobile (#84)

--- a/website/custom/index/assets/css/progress.css
+++ b/website/custom/index/assets/css/progress.css
@@ -2,6 +2,7 @@
     color: white;
     text-align: center;
     font-family: 'Roboto';
+    overflow: hidden;
 }
 
 .section .container > * {
